--- a/carreras-tecnicas.html
+++ b/carreras-tecnicas.html
@@ -2,20 +2,22 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Sistema de control academico Kalum</title>        
+        <title>Sistema de control academico Kalum</title>    
+        <link rel="stylesheet" href="./assets/css/style.css">     
     </head>
     <body>
         <div>
             <header>
                 <h1>Sistema de control académico Kalum V1.0.0</h1>
             </header>
-            <nav>
+            <nav id="menu">
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./carreras-tecnicas.html">Carreras técnicas</a></li>
                     <li><a href="./clases.html">Clases</a></li>
                     <li><a href="./inscripcion.html">Inscripcion</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
+                    <div class="clearFix"></div>
                 </ul>
             </nav>
             <hr>
@@ -35,8 +37,6 @@
                         <td><img src="./assets/images/tics.jpg" alt="Tic's" height="200px"></td>
                     </tr>
                 </table>
-
-                <img src="./assets/images/principal.png" alt="Kalum">
             </div>
             <footer>
                 Todos los derechos reservados &copy; Kalum v1.0.0
