--- a/contacto.html
+++ b/contacto.html
@@ -23,6 +23,27 @@
             <hr>
             <div id="contenido">
                 <h2>Contacto:</h2>
+                <form action="">
+                    <p>
+                        <label for="nombre">Nombre: </label>
+                        <div>
+                            <input type="text" name="nombre">
+                        </div>
+                    </p>
+                    <p>
+                        <label for="email">Email: </label>
+                        <div>
+                            <input type="text" name="Email">
+                        </div>
+                    </p>
+                    <p>
+                        <label for="Mesage ">Message: </label>
+                        <div>
+                            <input type="text" name="Message">
+                        </div>
+                    </p>
+                    <input type="submit" value="Enviar">
+                </form>
             </div>
             <footer>
                 Todos los derechos reservados &copy; Kalum v1.0.0
