Finalizacion de pagina de contactos

--- a/inscripcion.html
+++ b/inscripcion.html
@@ -23,7 +23,7 @@
             <hr>
             <div id="contenido">
                 <h2>Ficha de inscripicón</h2>
-                <form action="">
+                <form id="frm-inscripcion" action="">
                     <p>
                         <label for="carne">Carné</label>
                         <div>
