--- a/contacto.html
+++ b/contacto.html
@@ -24,25 +24,23 @@
             <div id="contenido">
                 <h2>Contacto:</h2>
                 <form action="">
-                    <p>
-                        <label for="nombre">Nombre: </label>
-                        <div>
-                            <input type="text" name="nombre">
-                        </div>
-                    </p>
-                    <p>
-                        <label for="email">Email: </label>
-                        <div>
-                            <input type="text" name="Email">
-                        </div>
-                    </p>
-                    <p>
-                        <label for="Mesage ">Message: </label>
-                        <div>
-                            <input type="text" name="Message">
-                        </div>
-                    </p>
-                    <input type="submit" value="Enviar">
+                    <table>
+                        <tr>
+                            <td>Nombre</td>
+                            <td><input type="text" nombre></td>
+                        </tr>
+                        <tr>
+                            <td>Email</td>
+                            <td><input type="text" name="email"></td>
+                        </tr>
+                        <tr>
+                            <td>Mensaje</td>
+                            <td><textarea  cols="130" rows="10"></textarea></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"><button>Enviar</button></td>
+                        </tr>
+                    </table>
                 </form>
             </div>
             <footer>
