Agregando script para formulario de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -27,18 +27,18 @@
                     <table>
                         <tr>
                             <td>Nombre</td>
-                            <td><input type="text" nombre></td>
+                            <td><input type="text" nombre="nombre" id="txtNombre"></td>
                         </tr>
                         <tr>
                             <td>Email</td>
-                            <td><input type="text" name="email"></td>
+                            <td><input type="text" name="email" id="txtEmail"></td>
                         </tr>
                         <tr>
                             <td>Mensaje</td>
                             <td><textarea  cols="130" rows="10"></textarea></td>
                         </tr>
                         <tr>
-                            <td colspan="2"><button>Enviar</button></td>
+                            <td colspan="2"><button id="btnEnviar">Enviar</button></td>
                         </tr>
                     </table>
                 </form>
@@ -48,4 +48,5 @@
             </footer>
         </div>
     </body>
+    <script src="assets/js/app.js"></script>
 </html>
